syntax = "proto3";
option java_package = "net.anzix.grpc.kerberos.example";
option java_outer_classname = "HelloServiceProtos";
option java_generate_equals_and_hash = true;
package net.anzix.grpc.kerberos.example;


message HelloRequest {
    string name = 1;
    //token is optional, only if you need the auth info on server side.
    bytes token = 2;
};

message HelloResponse {
    string response = 1;
};


service HelloService {
    rpc Hello (HelloRequest) returns (HelloResponse);
}